[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1"]

[node name="World" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.18, 0.31, 0.18, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="HBoxContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Title" type="Label" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "World Exploration"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "Gold: 100"

[node name="Controls" type="VBoxContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -180.0
grow_horizontal = 0
grow_vertical = 0

[node name="InventoryButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Inventory (I)"

[node name="SquadButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Squad"

[node name="MenuButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Main Menu"

[node name="InfoLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
text = "WASD to move (coming in Sprint 3)"
horizontal_alignment = 1
